zerocopy-derive/tests/ui-nightly/absence_of_deprecated_warning.stderr
error: use of deprecated struct `OldHeader`: Do not use
  --> /zerocopy-derive/tests/ui-nightly/absence_of_deprecated_warning.rs:31:12
   |
31 | impl T for OldHeader {}
   |            ^^^^^^^^^
   |
note: the lint level is defined here
  --> /zerocopy-derive/tests/ui-nightly/absence_of_deprecated_warning.rs:14:9
   |
14 | #![deny(deprecated)]
   |         ^^^^^^^^^^

warning: struct `OldHeader` is never constructed
  --> /zerocopy-derive/tests/ui-nightly/absence_of_deprecated_warning.rs:23:8
   |
23 | struct OldHeader {
   |        ^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: trait `T` is never used
  --> /zerocopy-derive/tests/ui-nightly/absence_of_deprecated_warning.rs:28:7
   |
28 | trait T {}
   |       ^

error: aborting due to 1 previous error; 2 warnings emitted

